--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start",
     "watch": "watchify --extension=js -o dist/main.js src/main.js"
   },
   "dependencies": {
@@ -22,7 +22,23 @@
     "gulp-plumber": "~1.0.1",
     "gulp-stylus": "~2.0.5",
     "gulp-watchify": "~0.5.0",
-    "watchify": "~3.4.0"
+    "watchify": "~3.4.0",
+    "sinon": "~1.17.1",
+    "espower-loader": "~1.0.0",
+    "intelli-espower-loader": "~1.0.0",
+    "power-assert": "~1.1.0",
+    "espower-babel": "~3.3.0",
+    "mocha": "~2.3.3",
+    "mithril-node-render": "~0.4.1",
+    "mithril-query": "~0.7.6",
+    "karma-mocha": "~0.2.0",
+    "karma-cli": "~0.1.1",
+    "espowerify": "~1.0.0",
+    "karma-chrome-launcher": "~0.2.1",
+    "karma-browserify": "~4.4.0",
+    "karma": "~0.13.11",
+    "browser-sync": "~2.9.11",
+    "babel-plugin-espower": "~1.0.0"
   },
   "browserify": {
     "transform": [
