--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run build && npm run connect",
     "connect": "node server.js",
     "watch": "npm run watch:js & npm run watch:stylus",
-    "build": "npm run build:js & npm run buils:stylus",
+    "build": "npm run build:js & npm run build:stylus",
     "watch:stylus": "stylus styl/ --watch  --out stylesheets/",
     "build:stylus": "stylus styl/ --out stylesheets/",
     "watch:js": "watchify --extension=js -o dist/main.js src/main.js",
@@ -20,28 +20,29 @@
     "browser-request": "~0.3.3"
   },
   "devDependencies": {
+    "babel-plugin-espower": "~1.0.0",
     "babelify": "~6.3.0",
+    "browser-sync": "~2.9.11",
     "browserify": "~9.0.8",
     "coffee-script": "~1.9.3",
-    "watchify": "~3.4.0",
-    "sinon": "~1.17.1",
-    "espower-loader": "~1.0.0",
-    "intelli-espower-loader": "~1.0.0",
-    "power-assert": "~1.1.0",
+    "connect": "~3.4.0",
     "espower-babel": "~3.3.0",
-    "mocha": "~2.3.3",
+    "espower-loader": "~1.0.0",
+    "espowerify": "~1.0.0",
+    "intelli-espower-loader": "~1.0.0",
+    "karma": "~0.13.11",
+    "karma-browserify": "~4.4.0",
+    "karma-chrome-launcher": "~0.2.1",
+    "karma-cli": "~0.1.1",
+    "karma-mocha": "~0.2.0",
     "mithril-node-render": "~0.4.1",
     "mithril-query": "~0.7.6",
-    "karma-mocha": "~0.2.0",
-    "karma-cli": "~0.1.1",
-    "espowerify": "~1.0.0",
-    "karma-chrome-launcher": "~0.2.1",
-    "karma-browserify": "~4.4.0",
-    "karma": "~0.13.11",
-    "browser-sync": "~2.9.11",
-    "babel-plugin-espower": "~1.0.0",
-    "connect": "~3.4.0",
-    "serve-static": "~1.10.0"
+    "mocha": "~2.3.3",
+    "power-assert": "~1.1.0",
+    "serve-static": "~1.10.0",
+    "sinon": "~1.17.1",
+    "stylus": "^0.52.4",
+    "watchify": "~3.4.0"
   },
   "browserify": {
     "transform": [
