--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "browser-request": "~0.3.3",
     "events": "~1.1.0",
+    "konva": "^0.11.1",
+    "lodash": "^4.2.0",
     "mithril": "~0.2.0",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "react-konva": "^0.6.1"
   },
   "devDependencies": {
     "babel-plugin-espower": "~1.0.0",
