--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "react-konva": "^0.6.1"
   },
   "devDependencies": {
-    "babel-plugin-espower": "~1.0.0",
-    "babelify": "~6.3.0",
+    "babel": "^6.3.26",
+    "babel-cli": "^6.4.5",
+    "babel-plugin-espower": "^2.0.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babelify": "^7.2.0",
     "browser-sync": "~2.9.11",
     "browserify": "~9.0.8",
     "connect": "~3.4.0",
@@ -43,7 +48,6 @@
     "serve-static": "~1.10.0",
     "sinon": "~1.17.1",
     "stylus": "^0.52.4",
-    "sweet.js": "^0.7.4",
     "watchify": "~3.4.0"
   },
   "browserify": {
