--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "karma start"
   },
   "dependencies": {
+    "@bokuweb/bms2js": "0.0.2",
     "browser-request": "~0.3.3",
     "events": "~1.1.0",
     "konva": "^0.11.1",
